--- a/projet js/style.css
+++ b/projet js/style.css
@@ -54,4 +54,22 @@ h1{
     -webkit-text-fill-color: transparent;
 }
 
+.all_project{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.citation, .to_do, .memory, .group, .api{
+    padding: 5rem;
+    margin-top: 6rem;
+}
+
+a{
+    font-family: 'Allan', display;
+    font-size: 2em;
+    text-decoration: none;
+    color: black;
+}
+
 
