--- a/projet js/style.css
+++ b/projet js/style.css
@@ -69,7 +69,7 @@ a{
     font-family: 'Allan', display;
     font-size: 2em;
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
 
