--- a/projet js/memorystyle.css
+++ b/projet js/memorystyle.css
@@ -45,32 +45,28 @@ table {
 
 
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Atma', display;
-}
-
-body{
-    background: rgb(221,179,222);
-    background: linear-gradient(49deg, rgba(221,179,222,1) 3%, rgba(159,164,235,1) 54%, rgba(230,156,103,1) 100%);
-}
-
-.wrapper{
-    box-sizing: border-box;
-    width: 27em;
-    padding: 2.5rem 3rem;
-    background-color: white;
+    font-family: "Poppins", sans-serif;
+  }
+  body {
+    background-color: #f4c531;
+  }
+  .wrapper {
+    box-sizing: content-box;
+    width: 26.87em;
+    padding: 2.5em 3em;
+    background-color: #ffffff;
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
-    border-radius: 10px;
-    box-shadow: 7px 4px 8px 2px rgb(110, 59, 110) ;
-}
-
-.game-container {
+    border-radius: 0.6em;
+    box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
+  }
+  .game-container {
     position: relative;
     width: 100%;
     display: grid;
@@ -103,14 +99,14 @@ body{
     backface-visibility: hidden;
   }
   .card-before {
-    background: rgb(221,179,222);
-    background: linear-gradient(49deg, rgba(221,179,222,1) 3%, rgba(159,164,235,1) 54%, rgba(230,156,103,1) 100%);
+    background-color: #f4c531;
     font-size: 2.8em;
     font-weight: 600;
   }
   .card-after {
     background-color: #ffffff;
     transform: rotateY(180deg);
+    
   }
   .card-container.flipped .card-before {
     transform: rotateY(180deg);
@@ -126,8 +122,7 @@ body{
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background: rgb(221,179,222);
-    background: linear-gradient(49deg, rgba(221,179,222,1) 3%, rgba(159,164,235,1) 54%, rgba(230,156,103,1) 100%);
+    background-color: #f4c531;
     top: 0;
   }
   button {
@@ -159,4 +154,8 @@ body{
   #result h4 {
     font-size: 1.8em;
     margin: 0.6em 0 1em 0;
+  }
+
+  .card-after img{
+    height: 100%;
   }
