--- a/projet js/groupstyle.css
+++ b/projet js/groupstyle.css
@@ -1,10 +1,10 @@
 @import url(https://fonts.bunny.net/css?family=dm-sans:400,400i,500,500i,700,700i|fasthand:400|source-serif-pro:400);
 @import url(https://fonts.bunny.net/css?family=dm-sans:400,400i,500,500i,700,700i|fasthand:400|montserrat:100,100i,200,300,400,500,600,700,800,900|source-serif-pro:400);
 @import url(https://fonts.bunny.net/css?family=alice:400|dm-sans:400,400i,500,500i,700,700i|fasthand:400|montserrat:100,100i,200,300,400,500,600,700,800,900|source-serif-pro:400);
-
+@import url(https://fonts.bunny.net/css?family=alex-brush:400);
 
 body {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat' , sans-serif;
     font-size: large;
     background: rgb(238,174,202);
     background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
@@ -14,8 +14,7 @@ h1 {
 	text-align: center;
     box-sizing: content-box;
     position:relative;
-
-
+	font-family: 'Alex Brush', handwriting;
 }
 
 label {
@@ -27,9 +26,23 @@ textarea {
 	height: 20px;
 }
 
+button {
+	border-radius: 30px;
+	background-color: #e2abcd;
+	border: 2px solid white;
+
+}
+#input {
+	border-radius: 2px;
+	background-color: #ffffff;
+	border: 2px solid white;
+	height:30px;
+
+ }
 #output {
 	display: flex;
 	flex-wrap: wrap;
+	
 }
 
 .group {
