--- a/projet js/generatorstyle.css
+++ b/projet js/generatorstyle.css
@@ -3,49 +3,56 @@
 @import url(https://fonts.bunny.net/css?family=alice:400|dm-sans:400,400i,500,500i,700,700i|fasthand:400|montserrat:100,100i,200,300,400,500,600,700,800,900|source-serif-pro:400);
 
 body {
-   
-    background-image: linear-gradient(to right, #eff8f9, #c2e0e4, #93c9cf, #60b1ba, #089aa6);
-
-
+ background-image: linear-gradient(to right, #eff8f9, #c2e0e4, #93c9cf, #60b1ba, #089aa6);
+ font-family: 'Alice', sans-serif;
 }
+
 h1 {
-    color: rgb(3, 37, 53);
-    text-align: center;
-    padding-top: 1em;
-    padding-bottom:2em;
-    font-family: 'Alice', sans-serif;
-    font-size: 3em;
-    
+ color: rgb(3, 37, 53);
+ text-align: center;
+ padding-top: 1em;
+ padding-bottom:2em;
+ font-size: 5vw;
 }
 
 button {
-    font-family: 'Alice', sans-serif;
-    display: flex;
-    margin: auto;
-    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgb(111, 171, 228) 17.8%, rgb(2, 162, 184) 100.2% );
-    border:none;
-    border-radius: 2em;
-    padding: 0.8em;
-    cursor:pointer;
-    border: none;
-    box-shadow: 2px 3px 4px rgb(36, 36, 67);
+ font-family: 'Alice', sans-serif;
+ display: flex;
+ margin: auto;
+ background-image: radial-gradient( circle farthest-corner at 10% 20%, rgb(111, 171, 228) 17.8%, rgb(2, 162, 184) 100.2% );
+ border:none;
+ border-radius: 2em;
+ padding: 0.8em;
+ cursor:pointer;
+ border: none;
+ box-shadow: 2px 3px 4px rgb(36, 36, 67);
+ font-size: 2vw;
 }
 
 #quote {
-    color: rgb(10, 10, 10);
-    font-family: 'Fasthand', display;
-    font-size:3em;
-    display:block;
-    padding-left:3em;
-    padding-bottom:2em;
-    cursor: pointer;
-    
-    
+ color: rgb(10, 10, 10);
+ font-family: 'Fasthand', display;
+ font-size:3vw;
+ display:block;
+ padding-left:3em;
+ padding-bottom:2em;
+ cursor: pointer;
 }
 
 .citations {
-    height: 250px;
-    width: 1080px;
-    margin: auto;
+ height: 250px;
+ width: 100%;
+ margin: auto;
 }
 
+@media screen and (max-width: 600px) {
+ h1 {
+   font-size: 3em;
+ }
+ button {
+   font-size: 1em;
+ }
+ #quote {
+   font-size:2em;
+ }
+}
